--- a/kooplexhub/education/templates/assignment.html
+++ b/kooplexhub/education/templates/assignment.html
@@ -6,16 +6,7 @@
 
 
 {% block head_content %}
-<!-- datetime picker requirements -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.2/dist/umd/popper.min.js"
-      crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@master/dist/js/tempus-dominus.js"
-      crossorigin="anonymous"></script>
-<link href="https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@master/dist/css/tempus-dominus.css"
-      rel="stylesheet" crossorigin="anonymous">
-
-<!-- bootstrap-toggler requirement -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
+{% block child_head %}{% endblock %}
 <style>
   .mytab{
     color: rgb(196, 196, 196);
@@ -51,14 +42,14 @@
     {% if active == "handlemass" %}
     <a class="nav-link mytab active" id="tab-handlemass" href="#" type="button" role="tab" aria-controls="AssignmentMass" aria-selected="true">Mass Assignments</a>
     {% else %}
-    <a class="nav-link mytab" id="tab-handlemass" href="{% url 'education:assignment_handle_mass' %}" type="button" role="tab" aria-controls="AssignmentMass" aria-selected="false">Mass Assignments</a>
+    <a class="nav-link mytab" id="tab-handlemass" href="{% url 'education:assignment_mass' %}" type="button" role="tab" aria-controls="AssignmentMass" aria-selected="false">Mass Assignments</a>
     {% endif %}
   </li>
   <li class="nav-item" role="presentation" data-intro="#handleassignmentarea">
     {% if active == "handle" %}
     <a class="nav-link mytab active" id="tab-handle" href="#" type="button" role="tab" aria-controls="Assignment" aria-selected="true">Handle Assignments</a>
     {% else %}
-    <a class="nav-link mytab" id="tab-handle" href="{% url 'education:assignment_handle' %}" type="button" role="tab" aria-controls="Assignment" aria-selected="false">Handle Assignments</a>
+    <a class="nav-link mytab" id="tab-handle" href="{% url 'education:assignment_handler' %}" type="button" role="tab" aria-controls="Assignment" aria-selected="false">Handle Assignments</a>
     {% endif %}
   </li>
   <li class="nav-item" role="presentation" data-intro="#summaryofcoursesarea">
@@ -149,52 +140,6 @@ $("#summary_course_selected").change(function() {
     }
   });
 }).change();
-$("#course_selected").change(function () {
-  var old = $( "#course_id" ).val();
-  var sel;
-  $( "#course_selected>option:selected" ).each(function() {
-    sel = $( this ).val();
-    $( "#course_id" ).val( sel );
-  });
-  if (old) {
-    $( "#newAssignmentForm-" + old ).hide();
-    $( "#newAssignmentForm-" + old ).find('input').each(function() {
-      $( this ).prop( "disabled", true );
-    });
-    $( "#newAssignmentForm-" + old ).find('textarea').each(function() {
-      $( this ).prop( "disabled", true );
-    });
-    $( "#newAssignmentForm-" + old ).find('select').each(function() {
-      $( this ).prop( "disabled", true );
-    });
-  } else {
-    $('[id^=newAssignmentForm-]').each(function() {
-      $( this ).find('input').each(function() {
-        $( this ).prop( "disabled", true );
-      });
-      $( this ).find('textarea').each(function() {
-        $( this ).prop( "disabled", true );
-      });
-      $( this ).find('select').each(function() {
-        $( this ).prop( "disabled", true );
-      });
-    });
-  }
-  $( "#newAssignmentForm-" + sel ).show();
-  $( "#newAssignmentForm-" + sel ).find('input').each(function() {
-    $( this ).prop( "disabled", false );
-  });
-  $( "#newAssignmentForm-" + sel ).find('textarea').each(function() {
-    $( this ).prop( "disabled", false );
-  });
-  $( "#newAssignmentForm-" + sel ).find('select').each(function() {
-    $( this ).prop( "disabled", false );
-  });
-  console.log( "chg: " + old + " -> " + sel );
-}).change();
-
-
-
 $("#search_student").keyup(function() {
   var pattern = $( this ).val().toUpperCase();
   console.log( "search student: " + pattern );
@@ -220,7 +165,6 @@ $("#search_student").keyup(function() {
     }
   });
 });
-
 $("input[id^='score-'").on("change", function() {
   var old = $("#old_" + $(this).attr("id"))
   console.log( $( this ).val() )
@@ -242,70 +186,7 @@ $("textarea[id^='feedback_text-'").on("change", function() {
   }
 });
 
-// loop over all linked datetime picker widgets
-document.querySelectorAll('[id^="linkedPickers1-"]').forEach(function(linkedPicker1Element) {
-  const linked1 = new tempusDominus.TempusDominus(linkedPicker1Element, {
-        display: {
-            icons: {
-                time: 'bi bi-clock',
-                date: 'bi bi-calendar',
-                up: 'bi bi-arrow-up',
-                down: 'bi bi-arrow-down',
-                previous: 'bi bi-chevron-left',
-                next: 'bi bi-chevron-right',
-                today: 'bi bi-calendar-check',
-                clear: 'bi bi-trash',
-                close: 'bi bi-x'
-            },
-            buttons: {
-                today: true,
-                clear: true,
-                close: true
-            }
-        }
-    });
-  const id_other = linkedPicker1Element.id.replace('linkedPickers1-', 'linkedPickers2-');
-  const linked2 = new tempusDominus.TempusDominus(document.getElementById(id_other), {
-        useCurrent: false,
-        display: {
-            icons: {
-                time: 'bi bi-clock',
-                date: 'bi bi-calendar',
-                up: 'bi bi-arrow-up',
-                down: 'bi bi-arrow-down',
-                previous: 'bi bi-chevron-left',
-                next: 'bi bi-chevron-right',
-                today: 'bi bi-calendar-check',
-                clear: 'bi bi-trash',
-                close: 'bi bi-x'
-            },
-            buttons: {
-                today: true,
-                clear: true,
-                close: true
-            }
-        }
-    });
-  
-    //using event listeners
-  linkedPicker1Element.addEventListener(tempusDominus.Namespace.events.change, (e) => {
-        linked2.updateOptions({
-            restrictions: {
-                minDate: e.detail.date
-            }
-        });
-  });
-  
-    //using subscribe method
-  const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e) => {
-        linked1.updateOptions({
-            restrictions: {
-                maxDate: e.date
-            }
-        });
-  });
-});
 </script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/js/bootstrap5-toggle.min.js"></script>
+{% block child_scripts %}{% endblock %}
 {% endblock %}
