--- a/kooplexhub/education/templates/assignment_new.html
+++ b/kooplexhub/education/templates/assignment_new.html
@@ -3,11 +3,23 @@
 {% load render_table from django_tables2 %}
 {% load extras %}
 
+{% block child_head %}
+<!-- datetime picker requirements -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.2/dist/umd/popper.min.js"
+      crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@master/dist/js/tempus-dominus.js"
+      crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@master/dist/css/tempus-dominus.css"
+      rel="stylesheet" crossorigin="anonymous">
+<!-- bootstrap-toggler requirement -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
+{% endblock %}
+
 {% block assignment_content %}
 <div class="tab-pane fade {% if active == "new" %}show active{% endif %}" id="newAssignment" role="tabpanel" aria-labelledby="tab-new">
   <div class="card shadow mt-3 p-3 mb-2 bg-light rounded">
     {% if f_assignment|length > 0 %}
-    <form id="assignments-form-new" class="form-horizontal" action="{% url 'education:newassignment' %}" method="post">
+    <form id="assignments-form-new" class="form-horizontal" action="{% url 'education:assignment_new_save' %}" method="post">
       {% csrf_token %}
       <input type="hidden" name="course_id" id="course_id" value="">
       <table>
@@ -41,3 +53,117 @@
   </div>
 </div>
 {% endblock %}
+
+{% block child_scripts %}
+<script>
+$("#course_selected").change(function () {
+  var old = $( "#course_id" ).val();
+  var sel;
+  $( "#course_selected>option:selected" ).each(function() {
+    sel = $( this ).val();
+    $( "#course_id" ).val( sel );
+  });
+  if (old) {
+    $( "#newAssignmentForm-" + old ).hide();
+    $( "#newAssignmentForm-" + old ).find('input').each(function() {
+      $( this ).prop( "disabled", true );
+    });
+    $( "#newAssignmentForm-" + old ).find('textarea').each(function() {
+      $( this ).prop( "disabled", true );
+    });
+    $( "#newAssignmentForm-" + old ).find('select').each(function() {
+      $( this ).prop( "disabled", true );
+    });
+  } else {
+    $('[id^=newAssignmentForm-]').each(function() {
+      $( this ).find('input').each(function() {
+        $( this ).prop( "disabled", true );
+      });
+      $( this ).find('textarea').each(function() {
+        $( this ).prop( "disabled", true );
+      });
+      $( this ).find('select').each(function() {
+        $( this ).prop( "disabled", true );
+      });
+    });
+  }
+  $( "#newAssignmentForm-" + sel ).show();
+  $( "#newAssignmentForm-" + sel ).find('input').each(function() {
+    $( this ).prop( "disabled", false );
+  });
+  $( "#newAssignmentForm-" + sel ).find('textarea').each(function() {
+    $( this ).prop( "disabled", false );
+  });
+  $( "#newAssignmentForm-" + sel ).find('select').each(function() {
+    $( this ).prop( "disabled", false );
+  });
+  console.log( "chg: " + old + " -> " + sel );
+}).change();
+// loop over all linked datetime picker widgets
+document.querySelectorAll('[id^="linkedPicker-"][id$="_valid_from"]').forEach(function(linkedPicker1Element) {
+	console.log(linkedPicker1Element);
+  const linked1 = new tempusDominus.TempusDominus(linkedPicker1Element, {
+        display: {
+            icons: {
+                time: 'bi bi-clock',
+                date: 'bi bi-calendar',
+                up: 'bi bi-arrow-up',
+                down: 'bi bi-arrow-down',
+                previous: 'bi bi-chevron-left',
+                next: 'bi bi-chevron-right',
+                today: 'bi bi-calendar-check',
+                clear: 'bi bi-trash',
+                close: 'bi bi-x'
+            },
+            buttons: {
+                today: true,
+                clear: true,
+                close: true
+            }
+        }
+    });
+  const id_other = linkedPicker1Element.id.replace('_valid_from', '_expires_at');
+  const linked2 = new tempusDominus.TempusDominus(document.getElementById(id_other), {
+        useCurrent: false,
+        display: {
+            icons: {
+                time: 'bi bi-clock',
+                date: 'bi bi-calendar',
+                up: 'bi bi-arrow-up',
+                down: 'bi bi-arrow-down',
+                previous: 'bi bi-chevron-left',
+                next: 'bi bi-chevron-right',
+                today: 'bi bi-calendar-check',
+                clear: 'bi bi-trash',
+                close: 'bi bi-x'
+            },
+            buttons: {
+                today: true,
+                clear: true,
+                close: true
+            }
+        }
+    });
+  
+    //using event listeners
+  linkedPicker1Element.addEventListener(tempusDominus.Namespace.events.change, (e) => {
+        linked2.updateOptions({
+            restrictions: {
+                minDate: e.detail.date
+            }
+        });
+  });
+  
+    //using subscribe method
+  const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e) => {
+        linked1.updateOptions({
+            restrictions: {
+                maxDate: e.date
+            }
+        });
+  });
+});
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/js/bootstrap5-toggle.min.js"></script>
+{% endblock %}
+
